# Bertons-Production-app

./: .env.example  .gitignore  .vercelignore  README.md  alembic.ini  build.py  cookies.txt  docker-compose.yml  main.py  pyproject.toml  start-mobile-test.bat  start-mobile-test.sh  vercel.json
.claude/: settings.local.json
Documentation/: 00_Project_Overview.md  01_System_Architecture.md  02_Data_Model.md  03_Form_Specifications.md  04_PDF_Compilation_Spec.md  05_Workflow_and_Lifecycle.md  06_Build_Roadmap.md  README.md
agent-tools/: 2d4b2a1c-cd8a-4d77-8fa0-c64d59c7b740.txt  d7bb5563-6de8-40fe-88dc-10d1ea705a6d.txt
alembic/: env.py
alembic/versions/: 791a084d54ca_initial_schema.py  b2c4e8f1a903_rbac_batch_status.py
app/: config.py  database.py  main.py
app/api/: __init__.py  batches.py  forms.py  operators.py
app/auth/: __init__.py  credentials.py  dependencies.py  session.py
app/forms/: __init__.py  registry.py  types.py  validation.py
app/models/: __init__.py  batch.py  compilation.py  db_enums.py  form_instance.py  operator.py  reading.py  uploaded_document.py
app/schemas/: __init__.py  batch.py
app/services/: batch_lifecycle.py  (+9 more)
scripts/: populate_run_15785.py  seed_dashboard_runs.py  seed_test_run.py
terminals/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/: test_auth.py  test_batch_lifecycle.py  test_document_management.py  test_form_persistence.py  test_gs1_parse.mjs  test_storage.py  test_work_order_parser.py
(+32 files in other folders)
