[project]
name = "berton-bottling-app"
version = "0.1.0"
description = "Bottling Run Intake & Compilation App for Berton Vineyards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "pypdf>=5.0.0",
    "aiofiles>=24.0.0",
    "itsdangerous>=2.2.0",
    "xhtml2pdf>=0.2.16",
    "vercel>=0.3.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.vercel]
entrypoint = "app.main:app"

[tool.vercel.scripts]
build = "python build.py"
